--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "4.14.1",
     "js-yaml": "3.3.0",
     "swagger-tools": "0.10.1",
+    "cors": "2.8.3",
     "url-join": "1.1.0"
   },
   "scripts": {
